# tfstarter

./: .gitignore  Cargo.toml  README.md
.github/workflows/: templates.yml
src/: commands.rs  init.rs  main.rs  utils.rs
templates/lambda-ddb-svc/: lambda_package.sh  requirements.txt
templates/lambda-ddb-svc/src/handler/: service_handler.py
templates/lambda-ddb-svc/src/repository/: dynamo_db_repository.py
templates/lambda-ddb-svc/src/service/: service.py
templates/lambda-ddb-svc/tf/: dynamodb.tf  iam_role_lambda.tf  locals.tf  main.tf  provider.tf  s3.tf  variables.tf
templates/lambda-ddb-svc/tf/modules/lambda/: main.tf  variable.tf
templates/lambda-ddb-svc/tf/tfvars/: prd.tfvars
templates/simple-module/: variables.tf
templates/simple-project/: provider.tf  variables.tf
