[package]
name = "tfstarter"
version = "0.2.0"
authors = ["Donovan HOANG <donovanhoang.pro@gmail.com>"]
license = "Apache-2.0"
description = "A tool to store terraform project templates and copy then on the fly"
readme = "README.md"
homepage = "https://github.com/Donovan1905/tfstarter"
repository = "https://github.com/Donovan1905/tfstarter"
keywords = ["cli", "terraform", "template"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "2.1.0"
csv = "1.3.0"
regex = "1"
