[package]
name = "tfstarter"
version = "0.3.1"
authors = ["Donovan HOANG <donovanhoang.pro@gmail.com>"]
license = "Apache-2.0"
description = "A tool to store terraform project templates and copy then on the fly"
readme = "README.md"
homepage = "https://github.com/Donovan1905/tfstarter"
repository = "https://github.com/Donovan1905/tfstarter"
keywords = ["cli", "terraform", "template"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "2.1.0"
regex = "1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tempfile = "3.9.0"
zip = "0.6.6"
